my own dependency inspector and graphs with both local and external modules.

--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "node-dependencies-view",
   "description": "nada",
   "dependencies": {
-    "viz.js": "^1.8.0",
+    "array-unique": "^0.3.2",
     "co-download": "^0.2.0",
     "decompress": "^4.2.0",
-    "mkdirp": "^0.5.1",
     "dependency-tree": "^5.9.1",
-    "relative": "^3.0.2",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "glob": "^7.1.2",
+    "mkdirp": "^0.5.1",
+    "precinct": "^3.6.0",
+    "resolve-from": "^3.0.0",
+    "rmr": "0.0.4",
+    "viz.js": "^1.8.0"
   },
   "scripts": {
     "start": "node server.js"
